Fixed dark mode icon positioning

--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,9 @@ body {
 .mode--switch {
   margin-left: 20px;
   margin-right: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .mode--switch:hover {
